--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "bulma": "^0.8.0",
     "bulma-timeline": "^3.0.4",
+    "github-markdown-css": "^3.0.1",
     "node-sass": "^4.13.0"
   }
 }
